8229288: [lworld] C2 should not clear storage property bits if comparing to non-inline array klass